# lca-deployment

./: .gitignore  README.md
authoring/lca-deployment-m6/: SKILL.md
python/: .env.example  README.md  pyproject.toml
python/deep_tutor/: .env.example  AGENTS.md  langgraph.json  pyproject.toml
python/deep_tutor/agent/: agent.py
python/deep_tutor/skills/module-1/: SKILL.md
python/deep_tutor/skills/module-2/: information.md
python/deep_tutor/skills/module-3/: information.md
python/deep_tutor/skills/module-4/: information.md
python/deep_tutor/skills/module-5/: information.md
python/deep_tutor/skills/module-6/: SKILL.md  information.md
python/deep_tutor/ui/: agent_client.py  app.py  deployment.py  index.html
python/l2/: 2.1-connecting.py
python/lang_chat/: langgraph.json  pyproject.toml
python/lang_chat/agent/: agent.py  auth_local.py  auth_supabase.py  system_prompt.py
python/lang_chat/build_inst/: code_agent_instructions.md  code_agent_instructions_1.md  detailed_plan.md
python/lang_chat/tutor_l1/: tutor_l1_instructions.md
python/lang_chat/tutor_l2/: tutor_l2_information.md  tutor_l2_instructions.md
python/lang_chat/ui/: agent_client.py  app.py  index.html  server.py
python/m2/: m2.1-connecting.py  m2.2-assistants.py
python/m4/l2/: .env.example  checkpointer.py  store.py
python/m5/l2/: auth.py  client.py  m5-l2-hw.py  pyproject.toml
python/m5/l2/hw/: pyproject.toml
python/m5/l2/hw_answers/: README.md  auth.py  langgraph.json  pyproject.toml
python/m5/l2/hw_answers/agent/: graph.py
python/m5/l3a/: auth.py  pyproject.toml
python/m5/l3b/: auth.py  client.py  langgraph.json  pyproject.toml
python/m5/l3b/agent/: graph.py
python/m5/l3c/: .env.example  auth.py  client.py  pyproject.toml
python/m5/l4/: .env.example  auth.py  client.py  pyproject.toml  setup.py
python/m5/l5/: .env.example  auth.py  langgraph.json  pyproject.toml
python/m5/l5/skills/module-4/: SKILL.md
python/m5/l5/ui/: agent_client.py  app.py
python/m6/dacli_tutor/: .env.example  AGENTS.md  deepagents.toml  mcp.json
python/m6/dacli_tutor/skills/module-1/: SKILL.md  information.md
python/m6/ui/: agent_client.py  app.py
python/m_auth/l2/: client.py  m_auth-l2-hw.py  pyproject.toml
python/m_auth/l2/hw/: pyproject.toml
python/m_auth/l2/hw_answers/: README.md  pyproject.toml
python/m_auth/l3a/: auth.py  client.py  pyproject.toml
python/m_auth/l3b/: auth.py  pyproject.toml
python/m_auth/l3c/: pyproject.toml
python/m_auth/l4/: auth.py  client.py  pyproject.toml  setup.py
python/m_dacli/dacli_tutor/: deepagents.toml
python/m_store/l2/: checkpointer.py  pyproject.toml  store.py
thinkific/src/: example.md
thinkific/src/l2/: l2.1-connecting.md  l2.2-ui.md
thinkific/src/m0/: m0.1-setup-python.md  m0.1-setup-typescript.md  m0.2-setup-typescript.md
thinkific/src/m1/: m1.0-intro.md  m1.1-the-agent.md  m1.1a-the-agent.md  m1.2-deploy.md  m1.3-use-the-tutor.md
thinkific/src/m2/: m2.1-connecting.md  m2.2-assistants.md  m2.2-ui.md  m2.3-custom-routes.md  m2.3-ui.md  m2.4-custom-routes.md  m2.4-invoke-vs-run.md
thinkific/src/m4/: m4.1-storage-in-langgraph.md  m4.2-storage-apis.md  m4.3-deepagents-backends.md  m4.4-records.md
thinkific/src/m5/: m5.1-intro.md  m5.2-local-auth.md  m5.3-private-conversations.md  m5.4-auth-provider.md  m5.5-tutor-auth.md
thinkific/src/m6/: m6.1-deepagents-cli.md  m6.2-exercise.md  m6.3-bring-your-own-ui.md
thinkific/src/m_dacli/: m_dacli.1-deepagents-cli.md  m_dacli.2-exercise.md
thinkific/src/m_store/: m_store.1-storage-in-langgraph.md  m_store.2-storage-apis.md  m_store.3-deepagents-backends.md
thinkific/src/shared/: sd-components.css  sd-components.js
ts/: package.json
ts/L2/: 2.1-connecting.ts
ts/lang_chat/: langgraph.json  package.json  tsconfig.json
ts/lang_chat/agent/: agent.ts  systemPrompt.ts
ts/lang_chat/tutor_l1/: tutor_l1_information.md
ts/lang_chat/ui/: agent_client.ts  app.ts  index.html  server.ts
typescript/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
typescript/deep_tutor/: .env.example  AGENTS.md  langgraph.json  package-lock.json  package.json  pnpm-lock.yaml
typescript/deep_tutor/agent/: agent.ts
typescript/deep_tutor/ui/: agentClient.ts  app.ts  (+2 more)
typescript/m2/: m2.1-connecting.ts  m2.2-assistants.ts
(+51 files in other folders)
