[project]
name = "tutor-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Agent framework
    "deepagents",
    "langgraph>=1.0.0,<2.0",
    "langchain>=1.0.0,<2.0",
    "langchain-core>=1.0.0,<2.0",
    "langsmith>=0.1.99",
    "langchain-mcp-adapters",

    # Model providers
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",

    # UI server (custom routes)
    "fastapi",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["agent*", "ui*"]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["T201", "E501", "UP006", "UP007"]
