[project]
name = "tutor-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Agent framework
    "deepagents",
    "langgraph>=1.0.0,<2.0",
    "langchain>=1.0.0,<2.0",
    "langchain-core>=1.3.3,<2.0",
    "langsmith>=0.8.0",
    "langchain-mcp-adapters",

    # Model providers
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",

    # UI server (custom routes)
    "fastapi",
    "python-dotenv",
    "langgraph-cli[inmem]>=0.4.0",
    "PyJWT>=2.0.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "ui*"]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["T201", "E501", "UP006", "UP007"]
